[package]
name = "arb-master"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arb_master"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
arb = { path = "../arb", features = ["cpi"]}
anchor-spl = "0.25.0"
solana-program = "1.10.34"
